# Stratified-Cross-Validation

./: .gitignore  README.md  Validación_Cruzada_Estratificada.ipynb  folds_partitions_corregido.xlsx  pyproject.toml  test_validacion_cruzada.py
datasets/: GoT.csv
examples/: quickstart.py  quickstart_fakenews.py
legacy/: Validación_Cruzada_Estratificada.ipynb  validacion_cruzada.py
outputs/: folds_partitions.xlsx  integrity_report.html  integrity_report.json  integrity_report.txt
outputs/folds/: Fold_1.csv  Fold_2.csv  Fold_3.csv  Fold_4.csv  Fold_5.csv
scripts/: build_deliverable.py
skfold_kge/: __init__.py  __main__.py  cli.py  io.py  metrics.py  partition.py  report.py  verify.py
skfold_kge/evaluate/: __init__.py  classification.py  kge.py
tests/: test_metrics.py  test_partition.py  test_verify.py
